# animation-lang

./: .gitignore  Cargo.toml  README.md
example_progs/: blink.txt  clamp.txt  clock.txt  comment.txt  cycle.txt  fade_life.txt  gradient_hue_rainbow.txt  hue_rainbow.txt  intrinsics.txt  level_in_parameter.txt  loop.txt  modify_variable.txt  off.txt  rainbow.txt  random.txt  random_inc.txt  random_life.txt  set_all.txt  set_pixel.txt  set_single.txt  shifts.txt  stack_size_in_loop.txt  variable.txt  zero_loop.txt
examples/: basic.rs  compile.rs  dummy_client.rs
src/: color_intermeddle_type.rs  instructions.rs  lib.rs  program.rs
src/compiler/: ast.rs  mod.rs
src/vm/: errors.rs  mod.rs  strip.rs
