[package]
name = "animation-lang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smart-leds-trait = "0.2.1"
embedded-graphics = "0.7.1"
rgb = "0.8.34"
rand = "0.8.5"
rand_chacha = "0.3.1"
nom = "7.1.1"
thiserror = "1.0.37"
derivative = "2.2.0"

[dev-dependencies]
clap = { version = "4.0.29", features = ["derive"] }
anyhow = "1.0.66"
